# rerun

./: Cargo.toml  pyproject.toml  test_keyboard_lcm.py
.github/workflows/: build-viewer.yml
dimos/: Cargo.toml  pyproject.toml
dimos/dimos_viewer/: __init__.py  __main__.py
dimos/src/: viewer.rs
dimos/src/interaction/: handle.rs  keyboard.rs  lcm.rs  mod.rs  protocol.rs
dimos/tests/: test_binary.py  test_install.py  test_wrapper.py
examples/rust/custom_callback/: Cargo.toml  README.md
examples/rust/custom_callback/src/: lib.rs  viewer.rs
examples/rust/custom_callback/src/interaction/: handle.rs  mod.rs  protocol.rs  sender.rs
