[package]
name = "dimos-viewer"
version = "0.30.0-alpha.4"
edition = "2024"
rust-version = "1.92"
license = "MIT OR Apache-2.0"
publish = false
description = "DimOS Interactive Viewer — custom Rerun viewer with LCM click-to-navigate"

[[bin]]
name = "dimos-viewer"
path = "src/viewer.rs"

[lib]
name = "dimos_viewer"
path = "src/lib.rs"

[features]
default = []
analytics = ["rerun/analytics"]

[dependencies]
rerun = { path = "../crates/top/rerun", default-features = false, features = [
  "native_viewer",
  "run",
  "server",
] }

clap = { workspace = true, features = ["derive"] }
bincode.workspace = true
mimalloc.workspace = true
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = [
  "io-util",
  "macros",
  "net",
  "rt-multi-thread",
  "signal",
  "sync",
  "time",
] }

[lints]
workspace = true
